1과제/충남1과제/eks/lattice/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: customer
  namespace: wsc2024
spec:
  parentRefs:
    - name: wsc2024-lattice-svc-net
      sectionName: http
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /healthcheck
    backendRefs:
      - name: customer-service
        namespace: wsc2024
        kind: Service
        port: 80
        weight: 100
